fix spacing for tech stack grid

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ nav{
     justify-content: space-between;
     background-color: var(--dark-pink);
     padding: 12px 36px;
-    position: relative;
+    position: fixed;
     z-index: 5;
     width: 100%;
     box-sizing: border-box;
@@ -95,7 +95,7 @@ nav h1{
 .hero-container{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: .5fr repeat(2, 1fr);
+    grid-template-rows: .5fr 1fr .8fr;
     width: max(425px, 80%);
     gap: 20px;
     justify-items: center;
@@ -110,6 +110,11 @@ nav h1{
     align-self: center;
 }
 
+#header hr{
+    border-top: solid 2px var(--light-pink);
+    width: 90%;
+    margin: 0 auto;
+}
 .pic{
     grid-column: 2 / 3;
     grid-row: 2 / 3;
@@ -129,9 +134,9 @@ nav h1{
 }
 
 .cta button{
-    width: 10em;
-    height: 5em;
-    border-radius: 8px;
+    width: 12em;
+    height: 6em;
+    border-radius: 12px;
 }
 
 .cta button:hover{
